# gdbus-cpp

./: .clang-format  .clang-tidy  .gitignore  meson.build  meson_options.txt
.github/workflows/: linux-build.yaml
example/: main.cpp  meson.build
gdbus-c++/: common.hpp  connection.cpp  connection.hpp  constants.hpp  debugger.hpp  error.cpp  error.hpp  gdbus-c++.hpp  interface.cpp  interface.hpp  meson.build  object.cpp  object.hpp  pointer.hpp  service.cpp  service.hpp  utils.cpp  utils.hpp  variant.hpp
gdbus-c++/details/: compile-time-string.hpp  connection.cpp  connection.hpp  dbus-type-traits.hpp  debugger.hpp  pointer.hpp  variant-deserializer.hpp  variant-serializer.hpp
options/: meson.build
samples/: greeter.cpp  meson.build
scripts/: lint-all.sh  lint-clang-format.sh  lint-clang-tidy.sh  lint-github-actions.sh
tests/: meson.build  variant.cpp
