# SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
# SPDX-License-Identifier: Apache-2.0

option('GDBUS_CPP_BUILD_EXAMPLE', type: 'boolean', value: true)
option('GDBUS_CPP_BUILD_TESTS', type: 'boolean', value: true)
option('GDBUS_CPP_BUILD_WITH_DEBUG_LOGGING', type: 'boolean', value: true)
