# SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
# SPDX-License-Identifier: Apache-2.0

set_variable('GDBUS_CPP_BUILD_SHARED_LIBRARY', get_option('default_library') != 'static')
set_variable('GDBUS_CPP_BUILD_EXAMPLE', get_option('GDBUS_CPP_BUILD_EXAMPLE'))
set_variable('GDBUS_CPP_BUILD_TESTS', get_option('GDBUS_CPP_BUILD_TESTS'))
set_variable('GDBUS_CPP_BUILD_WITH_DEBUG_LOGGING', get_option('GDBUS_CPP_BUILD_WITH_DEBUG_LOGGING'))
